# fs

./: .env  .gitignore  Cargo.toml  Dockerfile  TODO  docker-compose.yml  index.html  main.js
src/: common.rs  config.rs  errors.rs  lib.rs  main.rs  middleware.rs  receiver.rs  router.rs  sender.rs  session.rs
src/handlers/: core.rs
static/: main.css  upload.js
templates/: _flashes.html  base.html  error.html  index.html
