[package]
name = "fs"
version = "0.1.0"
authors = ["Tommy Pujol <git@itstommy.xyz>"]
edition = "2018"

[dependencies]
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
actix-web = "4"
actix-files = "0.6.2"
actix-session = { version = "0.7", features = ["cookie-session"] }
actix-multipart = "0.4"
sanitize-filename = "0.4"
human_bytes = "0.3.1"
env_logger = "0.9.0"
lazy_static = "1.4.0"
dotenv = "0.15.0"
serde = { version = "1.0.144", features = ["derive"] }
tera = { version = "1", default-features = false }
tokio = { version = "1.20.4", features = ["fs"] }
uuid = { version = "1", features = ["v4"] }
log = "0.4"